--- a/Hands-on-llm-works/text_generation_with_langchain.ipynb
+++ b/Hands-on-llm-works/text_generation_with_langchain.ipynb
@@ -607,7 +607,7 @@
       "cell_type": "code",
       "source": [
         "# Load Google AI's LLMs with LangChain\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCzuvZCi7f1G6iEqfiCJfCUDjHcV6njG8E\"\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = \"YOUR GOOGLE API KEY\"\n",
         "google_llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", temperature=0)\n",
         "\n",
         "# Create the ReAct template - same as your OpenAI example\n",
